--- a/mod/area/gabel_eskaelda_t.are.yml
+++ b/mod/area/gabel_eskaelda_t.are.yml
@@ -37,10 +37,10 @@ hash: !ruby/object:NWN::Gff::Struct
         languages: 
           4: Eskaelda - Turm
     NoRest: !ruby/object:NWN::Gff::Element {label: NoRest, type: :byte, value: 0}
-    OnEnter: !ruby/object:NWN::Gff::Element {label: OnEnter, type: :resref, value: ""}
-    OnExit: !ruby/object:NWN::Gff::Element {label: OnExit, type: :resref, value: ""}
-    OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
-    OnUserDefined: !ruby/object:NWN::Gff::Element {label: OnUserDefined, type: :resref, value: ""}
+    OnEnter: !ruby/object:NWN::Gff::Element {label: OnEnter, type: :resref, value: sr_enter_inside}
+    OnExit: !ruby/object:NWN::Gff::Element {label: OnExit, type: :resref, value: _area_leave}
+    OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: _area_hb}
+    OnUserDefined: !ruby/object:NWN::Gff::Element {label: OnUserDefined, type: :resref, value: _area_udef}
     PlayerVsPlayer: !ruby/object:NWN::Gff::Element {label: PlayerVsPlayer, type: :byte, value: 3}
     ResRef: !ruby/object:NWN::Gff::Element {label: ResRef, type: :resref, value: gabel_eskaelda_t}
     ShadowOpacity: !ruby/object:NWN::Gff::Element {label: ShadowOpacity, type: :byte, value: 50}
@@ -1928,6 +1928,6 @@ hash: !ruby/object:NWN::Gff::Struct
           Tile_SrcLight1: !ruby/object:NWN::Gff::Element {label: Tile_SrcLight1, type: :byte, value: 0}
           Tile_SrcLight2: !ruby/object:NWN::Gff::Element {label: Tile_SrcLight2, type: :byte, value: 0}
     Tileset: !ruby/object:NWN::Gff::Element {label: Tileset, type: :resref, value: tcei0}
-    Version: !ruby/object:NWN::Gff::Element {label: Version, type: :dword, value: 19}
+    Version: !ruby/object:NWN::Gff::Element {label: Version, type: :dword, value: 20}
     Width: !ruby/object:NWN::Gff::Element {label: Width, type: :int, value: 12}
     WindPower: !ruby/object:NWN::Gff::Element {label: WindPower, type: :int, value: 0}
