Eskaelda: fix transition typo

--- a/mod/area/gabel_eskaelda_t.git.yml
+++ b/mod/area/gabel_eskaelda_t.git.yml
@@ -54,7 +54,7 @@ hash: !ruby/object:NWN::Gff::Struct
           Interruptable: !ruby/object:NWN::Gff::Element {label: Interruptable, type: :byte, value: 1}
           KeyName: !ruby/object:NWN::Gff::Element {label: KeyName, type: :cexostr, value: ""}
           KeyRequired: !ruby/object:NWN::Gff::Element {label: KeyRequired, type: :byte, value: 0}
-          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: elda_t21_to_elda_t11}
+          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: elda_t21_2_elda_t11}
           LinkedToFlags: !ruby/object:NWN::Gff::Element {label: LinkedToFlags, type: :byte, value: 1}
           LoadScreenID: !ruby/object:NWN::Gff::Element {label: LoadScreenID, type: :word, value: 0}
           LocName: !ruby/object:NWN::Gff::Element 
