Eskaelda-Turm: set as indoors, Eskaelda-Fluegel: fix tag

--- a/mod/area/gabel_eskaelda_f.are.yml
+++ b/mod/area/gabel_eskaelda_f.are.yml
@@ -50,7 +50,7 @@ hash: !ruby/object:NWN::Gff::Struct
     SunFogAmount: !ruby/object:NWN::Gff::Element {label: SunFogAmount, type: :byte, value: 0}
     SunFogColor: !ruby/object:NWN::Gff::Element {label: SunFogColor, type: :dword, value: 9699327}
     SunShadows: !ruby/object:NWN::Gff::Element {label: SunShadows, type: :byte, value: 1}
-    Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: gabel_eskaelda_o}
+    Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: gabel_eskaelda_f}
     Tile_List: !ruby/object:NWN::Gff::Element 
       label: Tile_List
       type: :list
