--- a/mod/area/gabel_eskaelda_t.are.yml
+++ b/mod/area/gabel_eskaelda_t.are.yml
@@ -15,7 +15,7 @@ hash: !ruby/object:NWN::Gff::Struct
       type: :list
       value: []
 
-    Flags: !ruby/object:NWN::Gff::Element {label: Flags, type: :dword, value: 0}
+    Flags: !ruby/object:NWN::Gff::Element {label: Flags, type: :dword, value: 1}
     FogClipDist: !ruby/object:NWN::Gff::Element {label: FogClipDist, type: :float, value: 45.0}
     Height: !ruby/object:NWN::Gff::Element {label: Height, type: :int, value: 12}
     ID: !ruby/object:NWN::Gff::Element {label: ID, type: :int, value: -1}
@@ -50,7 +50,7 @@ hash: !ruby/object:NWN::Gff::Struct
     SunFogAmount: !ruby/object:NWN::Gff::Element {label: SunFogAmount, type: :byte, value: 0}
     SunFogColor: !ruby/object:NWN::Gff::Element {label: SunFogColor, type: :dword, value: 7709439}
     SunShadows: !ruby/object:NWN::Gff::Element {label: SunShadows, type: :byte, value: 1}
-    Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: EskaeldaTurm}
+    Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: gabel_eskaelda_t}
     Tile_List: !ruby/object:NWN::Gff::Element 
       label: Tile_List
       type: :list
