Arnwald, Area von Quintars Turm: Schild neu beschriftet
Unbefugten ist der Zutritt verboten

--- a/mod/area/area025.git.yml
+++ b/mod/area/area025.git.yml
@@ -414,9 +414,8 @@ hash: !ruby/object:NWN::Gff::Struct
             str_ref: 14563
             type: :cexolocstr
             value: !ruby/object:NWN::Gff::CExoLocString 
-              languages: 
-                4: Quintarius Farenor, Hexenmeister und Streiter Mystras
-                5: Quintarius Farenor, Hexenmeister und Streiter Mystras
+              languages:
+                0: Unbefugten ist der Zutritt verboten
           DisarmDC: !ruby/object:NWN::Gff::Element {label: DisarmDC, type: :byte, value: 15}
           Faction: !ruby/object:NWN::Gff::Element {label: Faction, type: :dword, value: 1}
           Fort: !ruby/object:NWN::Gff::Element {label: Fort, type: :byte, value: 16}
@@ -431,8 +430,8 @@ hash: !ruby/object:NWN::Gff::Struct
             str_ref: 14561
             type: :cexolocstr
             value: !ruby/object:NWN::Gff::CExoLocString 
-              languages: {}
-
+              languages:
+                0: Unbefugten ist der Zutritt verboten
           Lockable: !ruby/object:NWN::Gff::Element {label: Lockable, type: :byte, value: 0}
           Locked: !ruby/object:NWN::Gff::Element {label: Locked, type: :byte, value: 0}
           OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: ""}
