--- a/mod/utp/dcont_nonproxy.utp.yml
+++ b/mod/utp/dcont_nonproxy.utp.yml
@@ -1,8 +1,8 @@
---- !ruby/object:NWN::Gff::Gff 
+--- !ruby/object:NWN::Gff::Gff
 type: "UTP "
 version: V3.2
-hash: !ruby/object:NWN::Gff::Struct 
-  hash: 
+hash: !ruby/object:NWN::Gff::Struct
+  hash:
     AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
     Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 8}
     AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
@@ -12,11 +12,11 @@ hash: !ruby/object:NWN::Gff::Struct
         by OldManWhistler"}
     Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
     CurrentHP: !ruby/object:NWN::Gff::Element {label: CurrentHP, type: :short, value: 10}
-    Description: !ruby/object:NWN::Gff::Element 
+    Description: !ruby/object:NWN::Gff::Element
       label: Description
       str_ref: 4294967295
       type: :cexolocstr
-      value: !ruby/object:NWN::Gff::CExoLocString 
+      value: !ruby/object:NWN::Gff::CExoLocString
         languages: {}
 
     DisarmDC: !ruby/object:NWN::Gff::Element {label: DisarmDC, type: :byte, value: 0}
@@ -28,12 +28,12 @@ hash: !ruby/object:NWN::Gff::Struct
     Interruptable: !ruby/object:NWN::Gff::Element {label: Interruptable, type: :byte, value: 0}
     KeyName: !ruby/object:NWN::Gff::Element {label: KeyName, type: :cexostr, value: ""}
     KeyRequired: !ruby/object:NWN::Gff::Element {label: KeyRequired, type: :byte, value: 0}
-    LocName: !ruby/object:NWN::Gff::Element 
+    LocName: !ruby/object:NWN::Gff::Element
       label: LocName
       str_ref: 4294967295
       type: :cexolocstr
-      value: !ruby/object:NWN::Gff::CExoLocString 
-        languages: 
+      value: !ruby/object:NWN::Gff::CExoLocString
+        languages:
           0: dcont_nonproxy
     Lockable: !ruby/object:NWN::Gff::Element {label: Lockable, type: :byte, value: 1}
     Locked: !ruby/object:NWN::Gff::Element {label: Locked, type: :byte, value: 0}
@@ -68,5 +68,15 @@ hash: !ruby/object:NWN::Gff::Struct
     TrapType: !ruby/object:NWN::Gff::Element {label: TrapType, type: :byte, value: 0}
     Type: !ruby/object:NWN::Gff::Element {label: Type, type: :byte, value: 0}
     Useable: !ruby/object:NWN::Gff::Element {label: Useable, type: :byte, value: 1}
+    VarTable: !ruby/object:NWN::Gff::Element
+      label: VarTable
+      type: :list
+      value:
+      - !ruby/object:NWN::Gff::Struct
+        hash:
+          Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: dcont}
+          Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+          Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 1}
+        struct_id: 0
     Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
   struct_id: 4294967295
