Sumpf-Turm: remove spawn heartbeats

--- a/mod/area/sumpf_turm.git.yml
+++ b/mod/area/sumpf_turm.git.yml
@@ -287,7 +287,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: ""}
           OnClosed: !ruby/object:NWN::Gff::Element {label: OnClosed, type: :resref, value: ""}
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
-          OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: x2_o2_dead}
+          OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
           OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
@@ -357,7 +357,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: ""}
           OnClosed: !ruby/object:NWN::Gff::Element {label: OnClosed, type: :resref, value: ""}
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
-          OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: x2_o2_dead}
+          OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
           OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
@@ -779,7 +779,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
           OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: nw_o2_skeleton}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
           OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: ""}
           OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
@@ -1059,7 +1059,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
           OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: nw_o2_zombie}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
           OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: ""}
           OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
@@ -1129,7 +1129,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
           OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: nw_o2_skeleton}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
           OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: ""}
           OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
@@ -1199,7 +1199,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
           OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: nw_o2_skeleton}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
           OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: ""}
           OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
@@ -1269,7 +1269,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
           OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: nw_o2_skeleton}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
           OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: ""}
           OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
@@ -1339,7 +1339,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
           OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: nw_o2_skeleton}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
           OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: ""}
           OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
@@ -1409,7 +1409,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
           OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: nw_o2_skeleton}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
           OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: ""}
           OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
@@ -1479,7 +1479,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
           OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: nw_o2_skeleton}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
           OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: ""}
           OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
@@ -1549,7 +1549,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
           OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: nw_o2_skeleton}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
           OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: ""}
           OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
@@ -1619,7 +1619,7 @@ hash: !ruby/object:NWN::Gff::Struct
           OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
           OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: ""}
           OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: nw_o2_skeleton}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
           OnInvDisturbed: !ruby/object:NWN::Gff::Element {label: OnInvDisturbed, type: :resref, value: ""}
           OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: ""}
           OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
