--- a/mod/area/sumpf_turm.are.yml
+++ b/mod/area/sumpf_turm.are.yml
@@ -37,7 +37,7 @@ hash: !ruby/object:NWN::Gff::Struct
         languages: 
           0: Sumpf - Ein Turm
     NoRest: !ruby/object:NWN::Gff::Element {label: NoRest, type: :byte, value: 0}
-    OnEnter: !ruby/object:NWN::Gff::Element {label: OnEnter, type: :resref, value: ""}
+    OnEnter: !ruby/object:NWN::Gff::Element {label: OnEnter, type: :resref, value: sr_enter_cave}
     OnExit: !ruby/object:NWN::Gff::Element {label: OnExit, type: :resref, value: _area_leave}
     OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: _area_hb}
     OnUserDefined: !ruby/object:NWN::Gff::Element {label: OnUserDefined, type: :resref, value: _area_udef}
