--- a/mod/area/sumpf_turm.git.yml
+++ b/mod/area/sumpf_turm.git.yml
@@ -2271,89 +2271,8 @@ hash: !ruby/object:NWN::Gff::Struct
     TriggerList: !ruby/object:NWN::Gff::Element 
       label: TriggerList
       type: :list
-      value: 
-      - !ruby/object:NWN::Gff::Struct 
-        struct_id: 1
-        hash: 
-          AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Cursor: !ruby/object:NWN::Gff::Element {label: Cursor, type: :byte, value: 1}
-          DisarmDC: !ruby/object:NWN::Gff::Element {label: DisarmDC, type: :byte, value: 0}
-          Faction: !ruby/object:NWN::Gff::Element {label: Faction, type: :dword, value: 1}
-          Geometry: !ruby/object:NWN::Gff::Element 
-            label: Geometry
-            type: :list
-            value: 
-            - !ruby/object:NWN::Gff::Struct 
-              struct_id: 3
-              hash: 
-                PointX: !ruby/object:NWN::Gff::Element {label: PointX, type: :float, value: -1.0695}
-                PointY: !ruby/object:NWN::Gff::Element {label: PointY, type: :float, value: 0.1048}
-                PointZ: !ruby/object:NWN::Gff::Element {label: PointZ, type: :float, value: 5.025}
-            - !ruby/object:NWN::Gff::Struct 
-              struct_id: 3
-              hash: 
-                PointX: !ruby/object:NWN::Gff::Element {label: PointX, type: :float, value: -1.0187}
-                PointY: !ruby/object:NWN::Gff::Element {label: PointY, type: :float, value: -1.3074}
-                PointZ: !ruby/object:NWN::Gff::Element {label: PointZ, type: :float, value: 5.025}
-            - !ruby/object:NWN::Gff::Struct 
-              struct_id: 3
-              hash: 
-                PointX: !ruby/object:NWN::Gff::Element {label: PointX, type: :float, value: -0.2043}
-                PointY: !ruby/object:NWN::Gff::Element {label: PointY, type: :float, value: -1.2178}
-                PointZ: !ruby/object:NWN::Gff::Element {label: PointZ, type: :float, value: 5.2881}
-            - !ruby/object:NWN::Gff::Struct 
-              struct_id: 3
-              hash: 
-                PointX: !ruby/object:NWN::Gff::Element {label: PointX, type: :float, value: 0.0319}
-                PointY: !ruby/object:NWN::Gff::Element {label: PointY, type: :float, value: -0.7701}
-                PointZ: !ruby/object:NWN::Gff::Element {label: PointZ, type: :float, value: 5.025}
-            - !ruby/object:NWN::Gff::Struct 
-              struct_id: 3
-              hash: 
-                PointX: !ruby/object:NWN::Gff::Element {label: PointX, type: :float, value: 0.0}
-                PointY: !ruby/object:NWN::Gff::Element {label: PointY, type: :float, value: 0.0}
-                PointZ: !ruby/object:NWN::Gff::Element {label: PointZ, type: :float, value: 5.025}
-            - !ruby/object:NWN::Gff::Struct 
-              struct_id: 3
-              hash: 
-                PointX: !ruby/object:NWN::Gff::Element {label: PointX, type: :float, value: -0.2279}
-                PointY: !ruby/object:NWN::Gff::Element {label: PointY, type: :float, value: 0.1136}
-                PointZ: !ruby/object:NWN::Gff::Element {label: PointZ, type: :float, value: 5.025}
-          HighlightHeight: !ruby/object:NWN::Gff::Element {label: HighlightHeight, type: :float, value: 0.0}
-          KeyName: !ruby/object:NWN::Gff::Element {label: KeyName, type: :cexostr, value: key_awturm_sumpf}
-          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: WP_arnwald_turm_eg_2_sumpf_turm}
-          LinkedToFlags: !ruby/object:NWN::Gff::Element {label: LinkedToFlags, type: :byte, value: 2}
-          LoadScreenID: !ruby/object:NWN::Gff::Element {label: LoadScreenID, type: :word, value: 0}
-          LocalizedName: !ruby/object:NWN::Gff::Element 
-            label: LocalizedName
-            str_ref: 14760
-            type: :cexolocstr
-            value: !ruby/object:NWN::Gff::CExoLocString 
-              languages: 
-                0: New Area Transition
-          OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: ""}
-          OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
-          OnTrapTriggered: !ruby/object:NWN::Gff::Element {label: OnTrapTriggered, type: :resref, value: ""}
-          PortraitId: !ruby/object:NWN::Gff::Element {label: PortraitId, type: :word, value: 0}
-          ScriptHeartbeat: !ruby/object:NWN::Gff::Element {label: ScriptHeartbeat, type: :resref, value: ""}
-          ScriptOnEnter: !ruby/object:NWN::Gff::Element {label: ScriptOnEnter, type: :resref, value: ""}
-          ScriptOnExit: !ruby/object:NWN::Gff::Element {label: ScriptOnExit, type: :resref, value: ""}
-          ScriptUserDefine: !ruby/object:NWN::Gff::Element {label: ScriptUserDefine, type: :resref, value: ""}
-          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: sumpf_turm_2_arnwald_turm_eg}
-          TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: newtransition}
-          TrapDetectDC: !ruby/object:NWN::Gff::Element {label: TrapDetectDC, type: :byte, value: 0}
-          TrapDetectable: !ruby/object:NWN::Gff::Element {label: TrapDetectable, type: :byte, value: 1}
-          TrapDisarmable: !ruby/object:NWN::Gff::Element {label: TrapDisarmable, type: :byte, value: 1}
-          TrapFlag: !ruby/object:NWN::Gff::Element {label: TrapFlag, type: :byte, value: 0}
-          TrapOneShot: !ruby/object:NWN::Gff::Element {label: TrapOneShot, type: :byte, value: 1}
-          TrapType: !ruby/object:NWN::Gff::Element {label: TrapType, type: :byte, value: 0}
-          Type: !ruby/object:NWN::Gff::Element {label: Type, type: :int, value: 1}
-          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: 0.0}
-          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 38.6017}
-          YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: 0.0}
-          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 28.4199}
-          ZOrientation: !ruby/object:NWN::Gff::Element {label: ZOrientation, type: :float, value: 0.0}
-          ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: 0.0}
+      value: []
+
     WaypointList: !ruby/object:NWN::Gff::Element 
       label: WaypointList
       type: :list
@@ -2373,7 +2292,7 @@ hash: !ruby/object:NWN::Gff::Struct
           LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: ""}
           LocalizedName: !ruby/object:NWN::Gff::Element 
             label: LocalizedName
-            str_ref: 4294967295
+            str_ref: 14817
             type: :cexolocstr
             value: !ruby/object:NWN::Gff::CExoLocString 
               languages: {}
@@ -2385,11 +2304,11 @@ hash: !ruby/object:NWN::Gff::Struct
             value: !ruby/object:NWN::Gff::CExoLocString 
               languages: {}
 
-          MapNoteEnabled: !ruby/object:NWN::Gff::Element {label: MapNoteEnabled, type: :byte, value: 0}
-          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: WP_sumpf_turm_2_arnwald_turm_eg}
-          TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: ""}
+          MapNoteEnabled: !ruby/object:NWN::Gff::Element {label: MapNoteEnabled, type: :byte, value: 1}
+          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: wst_arnturm}
+          TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: nw_waypoint001}
           XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: -0.9808}
-          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 36.955}
+          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 38.1854}
           YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: -0.1951}
-          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 27.6097}
+          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 27.8617}
           ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: 5.0}
