client_2da: use $(N) notation for custom TLK references for an easier life

--- a/hak/client_2da/Makefile
+++ b/hak/client_2da/Makefile
@@ -1,11 +1,13 @@
 # Set as environment var!
 # NWNHOME=/home/elven/nwn
 
-NAME=silm_2da
+TARGET=silm_2da.hak
 
 VALIDEXT=*.2da *.itp
 
-all: hak
+twoda := $(addsuffix .2da, $(basename $(wildcard *.2ds)))
+
+all: $(TARGET)
 
 path:
 ifeq  "$(NWNHOME)" ""
@@ -13,14 +15,27 @@ ifeq  "$(NWNHOME)" ""
 	exit 1
 endif
 
+# 2ds were generated with:
+# for x in *.2da; do \
+#   cat $x | ruby -ne 'print $_.gsub(/(\s)(\d+)(\s+)/) {|y| x = $2.to_i;  $1 + (x > 0xfffff0 ? "$(" + (x - 0xffffff - 1).to_s + ")" : $2) + $3 }' \
+#   >! $(basename $x .2da).2ds; \
+# done
+
+%.2da : %.2ds
+	@echo "$< -> $@"
+	@cat $< | ruby -ne 'print $$_.gsub(/\$$\(([\d]+)\)/) {|x| $$1.to_i + 1 + 0xffffff}' > $@
 
 clean-backup:
 	-rm *.*~ *.out
 
 clean: clean-backup
+	rm *.2da
 	
-hak: path
-	erfpack.pl -H -o $(NWNHOME)/hak/$(NAME).hak $(VALIDEXT)
+$(TARGET): $(twoda)
+	erfpack.pl -H -o $@ $(VALIDEXT)
+
+install: path
+	@cp -v $(TARGET) $(NWNHOME)/hak/
 
 publish:
-	rsync -Pzva --chmod=go+r $(NWNHOME)/hak/$(NAME).hak elven@miyeritar.swordcoast.net::nwn-w/hak/
+	rsync -Pzva --chmod=go+r $(TARGET) elven@miyeritar.swordcoast.net::nwn-w/hak/
