--- a/mod/dlg/Makefile
+++ b/mod/dlg/Makefile
@@ -1,9 +1,1 @@
-objects := $(basename $(wildcard *.dlg.yml))
-
-all: $(objects)
-
-$(objects) : %.dlg : %.dlg.yml
-	nwn-gff-import -y -o $@ $<
-
-clean:
-	-@rm $(objects)
+../Makefile.resource
