--- a/mod/ssf/Makefile
+++ b/mod/ssf/Makefile
@@ -1,9 +1,1 @@
-objects := $(basename $(wildcard *.ssf.yml))
-
-all: $(objects)
-
-$(objects) : %.ssf : %.ssf.yml
-	nwn-gff-import -y -o $@ $<
-
-clean:
-	-@rm $(objects)
+../Makefile.resource
