--- a/mod/utc/Makefile
+++ b/mod/utc/Makefile
@@ -1,9 +1,1 @@
-objects := $(basename $(wildcard *.utc.yml))
-
-all: $(objects)
-
-$(objects) : %.utc : %.utc.yml
-	nwn-gff-import -y -o $@ $<
-
-clean:
-	-@rm $(objects)
+../Makefile.resource
