--- a/mod/utd/Makefile
+++ b/mod/utd/Makefile
@@ -1,9 +1,1 @@
-objects := $(basename $(wildcard *.utd.yml))
-
-all: $(objects)
-
-$(objects) : %.utd : %.utd.yml
-	nwn-gff-import -y -o $@ $<
-
-clean:
-	-@rm $(objects)
+../Makefile.resource
