--- a/mod/ute/Makefile
+++ b/mod/ute/Makefile
@@ -1,9 +1,1 @@
-objects := $(basename $(wildcard *.ute.yml))
-
-all: $(objects)
-
-$(objects) : %.ute : %.ute.yml
-	nwn-gff-import -y -o $@ $<
-
-clean:
-	-@rm $(objects)
+../Makefile.resource
