--- a/mod/uti/Makefile
+++ b/mod/uti/Makefile
@@ -1,9 +1,1 @@
-objects := $(basename $(wildcard *.uti.yml))
-
-all: $(objects)
-
-$(objects) : %.uti : %.uti.yml
-	nwn-gff-import -y -o $@ $<
-
-clean:
-	-@rm $(objects)
+../Makefile.resource
