--- a/mod/utm/Makefile
+++ b/mod/utm/Makefile
@@ -1,9 +1,1 @@
-objects := $(basename $(wildcard *.utm.yml))
-
-all: $(objects)
-
-$(objects) : %.utm : %.utm.yml
-	nwn-gff-import -y -o $@ $<
-
-clean:
-	-@rm $(objects)
+../Makefile.resource
