--- a/mod/uts/Makefile
+++ b/mod/uts/Makefile
@@ -1,9 +1,1 @@
-objects := $(basename $(wildcard *.uts.yml))
-
-all: $(objects)
-
-$(objects) : %.uts : %.uts.yml
-	nwn-gff-import -y -o $@ $<
-
-clean:
-	-@rm $(objects)
+../Makefile.resource
