--- a/mod/utt/Makefile
+++ b/mod/utt/Makefile
@@ -1,9 +1,1 @@
-objects := $(basename $(wildcard *.utt.yml))
-
-all: $(objects)
-
-$(objects) : %.utt : %.utt.yml
-	nwn-gff-import -y -o $@ $<
-
-clean:
-	-@rm $(objects)
+../Makefile.resource
