--- a/mod/utw/Makefile
+++ b/mod/utw/Makefile
@@ -1,9 +1,1 @@
-objects := $(basename $(wildcard *.utw.yml))
-
-all: $(objects)
-
-$(objects) : %.utw : %.utw.yml
-	nwn-gff-import -y -o $@ $<
-
-clean:
-	-@rm $(objects)
+../Makefile.resource
