--- a/mod/utp/Makefile
+++ b/mod/utp/Makefile
@@ -1,9 +1,1 @@
-objects := $(basename $(wildcard *.utp.yml))
-
-all: $(objects)
-
-$(objects) : %.utp : %.utp.yml
-	nwn-gff-import -y -o $@ $<
-
-clean:
-	-@rm $(objects)
+../Makefile.resource
