nwn-lib >= 0.4.0: auto-generate appearance.h from 2da

--- a/mod/nss/Makefile
+++ b/mod/nss/Makefile
@@ -33,6 +33,9 @@ include Makefile.dep
 # From Makefile.dep:
 # $(objects)   array of script basenames (without extension) that are compileable
 
+appearance.h:
+	../generate_appearance_h.rb > appearance.h
+
 Makefile.dep: $(headers) $(scripts)
 	@echo "Building dependencies: Makefile.dep .."
 	@./build_dep_list.rb -g stddef.h -g _const.nh $(headers) $(scripts) > Makefile.dep
